2000-08-19  Lauris Kaplinski  <lauris@helixcode.com>

	* widgets/e-text/e-text.h: Commented out Suckfont, added EFont
	* widgets/e-text/e-text.c: Ported to UTF-8

2000-08-18  Peter Williams  <peterw@helixcode.com>

	* configure.in (gnome-vfs): Check for new enough gnome-vfs
	(needs gnome_vfs_mime_get_default_action_without_fallback)

2000-08-14  Federico Mena Quintero  <federico@helixcode.com>

	* configure.in (AC_OUTPUT): Generate
	doc/devel/calendar/cal-util/Makefile.

2000-08-14  Peter Williams  <peterw@helixcode.com>

	* configure.in: Check for db1/db.h too, which is what
	RH 7.0 uses for the old db headers. Patch from Kenny Graunke
	<kwg@teleport.com>

2000-08-13  Chris Toshok  <toshok@helixcode.com>

	* configure.in: offer --enable-pilot-conduits to add pilot
	conduits if the user wants them.

2000-08-13  Dan Winship  <danw@helixcode.com>

	* configure.in: Fix the name of the binary to look for for PGP5

2000-08-12  Michael Meeks  <michael@helixcode.com>

	* configure.in: Check for Bonobo 0.17

2000-08-12  Christopher James Lahey  <clahey@helixcode.com>

	* configure.in: Added addressbook/gui/search/Makefile.

2000-08-12  Dan Winship  <danw@helixcode.com>

	* configure.in, README: Depend on gnome-vfs 0.3

2000-08-10  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/.cvsignore, widgets/e-text/Makefile.am,
	widgets/e-text/e-entry-test.c: Added a test for the EEntry widget.

2000-08-09  Dan Winship  <danw@helixcode.com>

	* data/evolution.keys: New file containing MIME keys for
	Evolution. Currently just the addressbook minicard display.

	* data/Makefile.am (mime_DATA): add evolution.keys

2000-08-09  Peter Williams  <peterw@helixcode.com>

	* configure.in (EVOLUTION_DIR): Remove the warning about camel-async.

2000-08-08  Peter Williams  <peterw@helixcode.com>

	* Makefile.am (SUBDIRS): Reenable the calendar. Oops.

2000-08-05  Dan Winship  <danw@helixcode.com>

	* tools/verify-evolution-install.sh: Look for oafinfo files in