@@ -1,3 +1,8 @@
+2000-08-20  arik devens  <arik@helixcode.com>
+
+	* widgets/e-text/Makefile.am (INCLUDES): added UNICODE_CFLAGS
+	support so that compiling in an alternate prefix works.
+
 2000-08-19  Lauris Kaplinski  <lauris@helixcode.com>
 
 	* widgets/e-text/e-text.h: Commented out Suckfont, added EFont
